kubernetes/homelab/apps/games/minecraft/1/app/nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-1
spec:
  selector:
    app.kubernetes.io/instance: minecraft-1
  ports:
    - protocol: TCP
      name: gui
      port: 25565
      targetPort: 25565
      nodePort: 30104
  type: NodePort
