kubernetes/homelab/apps/games/minecraft/1/app/dns-record.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json                                                                                                                                            !10083
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obkiddos-1
spec:
  hostnames:
    - obkiddos-1.drmoo.io
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: minecraft-1
          port: 5690
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
