kubernetes/homelab/apps/games/minecraft/1/app/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-1
  annotations:
    external-dns.kubernetes.io/target: external.drmoo.io
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Minecraft 1
    gethomepage.dev/group: Games
    gethomepage.dev/icon: minecraft
    gethomepage.dev/name: "OBKiddos 1 BlueMap"
    gethomepage.dev/app: minecraft-1
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=minecraft-1
    gethomepage.dev/instance: homepage-external
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  hostnames:
    - obkiddos-1-map.drmoo.io
  rules:
    - backendRefs:
        - name: minecraft-1-bluemap
          port: 8100
